[gd_scene load_steps=5 format=3 uid="uid://dorq11xt28nax"]

[ext_resource type="Script" path="res://Scripts/radial_slice_game.gd" id="1_m4q4i"]
[ext_resource type="Shader" path="res://Scripts/sliceable.gdshader" id="2_t4kt4"]
[ext_resource type="Texture2D" uid="uid://myu3x5ttwg7" path="res://Assets/foods/banana/banana.svg" id="3_uoh5i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hqhl3"]
shader = ExtResource("2_t4kt4")
shader_parameter/percent = 50.0
shader_parameter/cut = true
shader_parameter/cut_time = -2.99
shader_parameter/horizontal = null

[node name="radialSliceGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_m4q4i")

[node name="sliceMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="sliceable" type="TextureRect" parent="sliceMargin"]
material = SubResource("ShaderMaterial_hqhl3")
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_uoh5i")
expand_mode = 1
stretch_mode = 5

[node name="sliceArea" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.870588, 1, 1, 0)

[connection signal="gui_input" from="sliceArea" to="." method="_on_slice_area_gui_input"]
[connection signal="mouse_entered" from="sliceArea" to="." method="_on_slice_area_mouse_entered"]
[connection signal="mouse_exited" from="sliceArea" to="." method="_on_slice_area_mouse_exited"]
